# agmon

./: .gitignore  BACKLOG.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  REVIEW.md  SPEC.md  pyproject.toml
deploy/: agmon.service
emacs/: README.org  agmon-tests.el  agmon.el
notes/: friction.md
prompts/: consolidate-review.md  review.md
specs/: 002-semantics.md  003-cli.md  004-emacs.md  005-labels-lineage.md  006-artifacts.md  007-model-harvest.md  008-rm.md
src/agmon/: __init__.py  api.py  artifacts.py  cli.py  client.py  config.py  db.py  derive.py  ingest.py  labels.py  render.py  runner.py
tests/: test_adversarial.py  test_agmon.py  test_artifacts.py  test_artifacts_api.py  test_cli.py  test_client.py  test_derive.py  test_labels.py  test_model_harvest.py  test_render.py  test_review.py  test_review_findings.py  test_review_model_harvest.py  test_stage2.py  test_stage3_server.py
