[project]
name = "agmon"
version = "0.3.0"
description = "Monitor headless Claude Code runs from anywhere on your tailnet — spool-based ingest, derived run semantics, and a CLI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "httpx>=0.28.1",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/phairoh/agmon"

[project.scripts]
agmon = "agmon.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
